fix(ui): fix drawer overflow bug (#984)
fix drawer overflow bug

--- a/packages/ui/src/components/Drawer/index.module.scss
+++ b/packages/ui/src/components/Drawer/index.module.scss
@@ -1,10 +1,21 @@
 @use '@/scss/underscore' as _;
 
+.drawer {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  outline: none;
+  padding-bottom: env(safe-area-inset-bottom);
+}
+
 .container {
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
-  padding: _.unit(5);
+  padding: _.unit(5) _.unit(5) 0;
   background: var(--color-dialogue);
+  max-height: 411px;
+  @include _.flex-column(stretch, normal);
 }
 
 .header {
@@ -20,16 +31,15 @@
   }
 }
 
-.drawer {
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  max-height: 411px;
-  outline: none;
-  padding-bottom: env(safe-area-inset-bottom);
-}
+.content {
+  flex: 1;
+  overflow-y: auto;
+  padding-bottom: _.unit(5);
 
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
 
 /* stylelint-disable selector-class-pattern */
 :global {
